--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@react-login-page/page8": "^1.0.4",
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "framer-motion": "^11.0.20",
     "leaflet": "^1.9.4",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.36",
+    "sass": "^1.77.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
   }
